adding mma proper

--- a/index.html
+++ b/index.html
@@ -286,6 +286,7 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 <a href="https://mech.iitm.ac.in/meiitm/personnal/dr-krithika-narayanaswamy/" target="_blank">Faculty page</a><br>
 <a href="https://scholar.google.com/citations?user=EfVTkm8AAAAJ&hl=en" target="_blank">Scholar page</a> <br>
 <a href="https://www.researchgate.net/profile/Krithika_Narayanaswamy" target="_blank">ResearchGate page</a> <br>
+<a href="http://iitm.irins.org/profile/68217" target="_blank">Scholar Profiles @ IITM</a> <br>
 <!--<a href="https://owncloud.iitm.ac.in/index.php/s/QZfWJrYujbmlLw4" target="_blank">Group picture (May 2017)pw: 1</a> <br> -->
 </td>
 
@@ -681,12 +682,12 @@ Konnov, and Krithika Narayanaswamy, "Experimental study and a short kinetic mode
 </div>
 <div id="panel1">
 	<ul style="list-style-type:square">
-	<li><a href="https://www.dropbox.com/s/bfs9jm9ra5sqgsu/MMA_R1.pdf?dl=0" target="_blank">Preprint*</a></li>
-	<li><a href="https://www.dropbox.com/s/doypdy7sg129b31/Supplementary_MMA.pdf?dl=0" target="_blank">Supplementary document</a></li>
+	<li><a href="https://www.dropbox.com/s/59qd6qat51mh1pz/MMA.pdf?dl=0" target="_blank">Preprint*</a></li>
+	<li><a href="https://www.dropbox.com/s/q2c60lulb44mutd/supplementary.pdf?dl=0" target="_blank">Supplementary document</a></li>
 	<li>Experimental data: <a href="https://www.dropbox.com/s/93lg0d3klxy3uwd/MMA_mole%20fractions_final_EXPERIMENT.xls?dl=0" target="_blank">Speciation in atmospheric premixed flame, laminar burning velocities</a></li>
-	<li>Mechanism files: <a href="https://www.dropbox.com/s/nrvkm28650ybl68/MMA_reduced.chmech?dl=0" target="_blank">Chemkin format</a>/<a href="??">FlameMaster format</a>
-	<li><a href="https://www.dropbox.com/s/xrrg6i8mzaen3cj/thermo_bc_mma.txt?dl=0" target="_blank">Thermodynamic data</a></li>
-	<li><a href="https://www.dropbox.com/s/2q6j1oommdr4p4u/trans_bc_mma.txt?dl=0" target="_blank">Transport data</a></li>
+	<li>Mechanism files: <a href="https://www.dropbox.com/s/wo6drchfpdds0zl/short_mma_mech_Chemkin.inp?dl=0" target="_blank">Chemkin format</a>/<a href="https://www.dropbox.com/s/mfa36i6rqfi6w99/short_mma_mech_FlameMaster.txt?dl=0">FlameMaster format</a>
+	<li><a href="https://www.dropbox.com/s/iyetkm3s0ovgy99/thermo_mma.txt?dl=0" target="_blank">Thermodynamic data</a></li>
+	<li><a href="https://www.dropbox.com/s/jwjrvnxahn4hoa2/trans_mma.txt?dl=0" target="_blank">Transport data</a></li>
 </ul>
 </div>
 <br>
