me1100:adding chapter 8

--- a/teaching/ME1100_Jul_Nov_2018.html
+++ b/teaching/ME1100_Jul_Nov_2018.html
@@ -52,7 +52,7 @@ Jul-Nov 2018 </h1>
 <h3>Course Lectures </h3>
 <ul>	
 <li><a href="https://owncloud.iitm.ac.in/index.php/s/lGo6RpBHLT30rj4" target="_blank">Lecture notes from Prof. TS</a> (same as on moodle) <br> 
-<li><a href="https://owncloud.iitm.ac.in/index.php/s/lT8IOKYhbNCWW8J" target="_blank">Chapter 8 of notes from Prof. TS </a>
+<li><a href="https://owncloud.iitm.ac.in/index.php/s/K17xxuNZaEYar2g" target="_blank">Chapter 8 of notes from Prof. TS </a>
 <br><br>
 	</ul>
 
