logger:sister nivedita day

--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@ Konnov, and Krithika Narayanaswamy, "Experimental study and a short kinetic mode
 	<li><a href="https://www.dropbox.com/s/59qd6qat51mh1pz/MMA.pdf?dl=0" target="_blank">Preprint*</a></li>
 	<li><a href="https://www.dropbox.com/s/q2c60lulb44mutd/supplementary.pdf?dl=0" target="_blank">Supplementary document</a></li>
 	<li>Experimental data: <a href="https://www.dropbox.com/s/93lg0d3klxy3uwd/MMA_mole%20fractions_final_EXPERIMENT.xls?dl=0" target="_blank">Speciation in atmospheric premixed flame, laminar burning velocities</a></li>
-	<li>Mechanism files: <a href="https://www.dropbox.com/s/wo6drchfpdds0zl/short_mma_mech_Chemkin.inp?dl=0" target="_blank">Chemkin format</a>/<a href="https://www.dropbox.com/s/mfa36i6rqfi6w99/short_mma_mech_FlameMaster.txt?dl=0">FlameMaster format</a>
+	<li>Mechanism files: <a href="https://www.dropbox.com/s/wo6drchfpdds0zl/short_mma_mech_Chemkin.inp?dl=0" target="_blank">Chemkin format</a>/<a href="https://www.dropbox.com/s/mfa36i6rqfi6w99/short_mma_mech_FlameMaster.txt?dl=0" target="_blank">FlameMaster format</a>
 	<li><a href="https://www.dropbox.com/s/iyetkm3s0ovgy99/thermo_mma.txt?dl=0" target="_blank">Thermodynamic data</a></li>
 	<li><a href="https://www.dropbox.com/s/jwjrvnxahn4hoa2/trans_mma.txt?dl=0" target="_blank">Transport data</a></li>
 </ul>
