--- a/logger/logger.html
+++ b/logger/logger.html
@@ -40,4 +40,9 @@ Travel:
 <ul> 
 <li> <a href="https://www.dropbox.com/s/cpi1cedtoah6uyg/travel_1.pdf?dl=0" style="text-decoration:none;color:white" target="_blank"> Kanchipuram temple </a></li>
 </ul>
+
+Events: 
+<ul> 
+<li> <a href="https://www.dropbox.com/s/vygxjoxfhz1ec1e/RKMutt_Sister_Nivedita.pdf?dl=0" style="text-decoration:none;color:white" target="_blank"> 150th Sister Nivedita day </a></li>
+</ul>
 </body></html>
