me1100: tut7, pset 12

--- a/teaching/ME1100_Jul_Nov_2018.html
+++ b/teaching/ME1100_Jul_Nov_2018.html
@@ -156,7 +156,8 @@ Calvin's view of entropy
  <a href="https://owncloud.iitm.ac.in/index.php/s/Wu0avN5EwW9kHRP" target="_blank">Problems</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/fsKkxo7jRkBhQjT" target="_blank"> Solutions-Part I</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/lcmwPpUS4uTFLn0" target="_blank"> Solutions-Part II</a><br>
  <li> Tutorial 4: <a href="https://owncloud.iitm.ac.in/index.php/s/jMFWZNLw58997lH" target="_blank">Problems</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/igHVMClfIyyuOHY" target="_blank"> Solutions</a> <br>
  <li> Tutorial 5: <a href="https://owncloud.iitm.ac.in/index.php/s/ZwvEhgrHn5gH8n0" target="_blank">Problems</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/TvR7zXe0adNkrU9" target="_blank"> Solutions</a> <br>
- <li> Tutorial 6: <a href="https://owncloud.iitm.ac.in/index.php/s/dzAdAbbtYO2nJOm" target="_blank">Problems</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/br5bRajbjr4IMlE" target="_blank"> Solutions</a>
+ <li> Tutorial 6: <a href="https://owncloud.iitm.ac.in/index.php/s/dzAdAbbtYO2nJOm" target="_blank">Problems</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/br5bRajbjr4IMlE" target="_blank"> Solutions</a> <br>
+ <li> Tutorial 7: <a href="https://owncloud.iitm.ac.in/index.php/s/XW8kYseNYafiUvv" target="_blank">Problems</a>
 	 <br><br>
 	</ul>
 
@@ -172,6 +173,7 @@ Calvin's view of entropy
     <li>Problem Set 6:  <a href="https://owncloud.iitm.ac.in/index.php/s/6S9euS2NApPYklQ" target="_blank">Steam-water substance, first law</a>
   <li>Problem Set 9: <a href="https://owncloud.iitm.ac.in/index.php/s/XPIftdM8IecgId6" target="_blank">First Law for flow processes</a>
   <li>Problem Set 11: <a href="https://owncloud.iitm.ac.in/index.php/s/314ZGwfFqq8bBuq" target="_blank">Second law of thermodynamics</a> 
+  <li>Problem Set 12: <a href="https://owncloud.iitm.ac.in/index.php/s/TGk1HXnfS6NxIyz" target="_blank">Entropy</a> 
 	  <br><br>
 </ul>
 
