--- a/teaching/ME1100_Jul_Nov_2018.html
+++ b/teaching/ME1100_Jul_Nov_2018.html
@@ -184,6 +184,7 @@ Calvin's view of entropy
   <li>Problem Set 7: <a href="https://owncloud.iitm.ac.in/index.php/s/GvaX7aIOCVryARc" target="_blank">Steam-water substance, first law</a>
   <li>Problem Set 8: <a href="https://owncloud.iitm.ac.in/index.php/s/9US7dpX4GytJhEB" target="_blank">First Law for flow processes</a>
   <li>Problem Set 10: <a href="https://owncloud.iitm.ac.in/index.php/s/4qAp0GcmMBTuMQM" target="_blank">First Law for flow processes</a> (view-able upon downloading)
+  <li>Problem Set 13: <a href="https://owncloud.iitm.ac.in/index.php/s/ak6RQEnHGGbgB0Y" target="_blank"> Second Law, Entropy, Cycles </a>
   <li>Corrections: <a href="https://owncloud.iitm.ac.in/index.php/s/vFN4hHuRArIH8BU" target="_blank">Corrections</a>
    <br><br>
 </ul>
