me1100: tut 7 solutions

--- a/teaching/ME1100_Jul_Nov_2018.html
+++ b/teaching/ME1100_Jul_Nov_2018.html
@@ -157,7 +157,7 @@ Calvin's view of entropy
  <li> Tutorial 4: <a href="https://owncloud.iitm.ac.in/index.php/s/jMFWZNLw58997lH" target="_blank">Problems</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/igHVMClfIyyuOHY" target="_blank"> Solutions</a> <br>
  <li> Tutorial 5: <a href="https://owncloud.iitm.ac.in/index.php/s/ZwvEhgrHn5gH8n0" target="_blank">Problems</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/TvR7zXe0adNkrU9" target="_blank"> Solutions</a> <br>
  <li> Tutorial 6: <a href="https://owncloud.iitm.ac.in/index.php/s/dzAdAbbtYO2nJOm" target="_blank">Problems</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/br5bRajbjr4IMlE" target="_blank"> Solutions</a> <br>
- <li> Tutorial 7: <a href="https://owncloud.iitm.ac.in/index.php/s/XW8kYseNYafiUvv" target="_blank">Problems</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/Qpch9YaOqkDzGOr" target="_blank">
+ <li> Tutorial 7: <a href="https://owncloud.iitm.ac.in/index.php/s/XW8kYseNYafiUvv" target="_blank">Problems</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/Qpch9YaOqkDzGOr" target="_blank"> Solutions</a> 
 	 <br><br>
 	</ul>
 
