me1100: 2nd law lecture summary first draft

--- a/teaching/ME1100_Jul_Nov_2018.html
+++ b/teaching/ME1100_Jul_Nov_2018.html
@@ -111,6 +111,7 @@ Calvin's view of entropy
 	<li> <a href="https://owncloud.iitm.ac.in/index.php/s/0eo7s7DeamNn4Uq" target="_blank">First Law of thermodynamics</a>
 	<li> <a href="https://owncloud.iitm.ac.in/index.php/s/aFUgcebOONekXKT" target="_blank">Pure substances</a>
 	<li> <a href="https://owncloud.iitm.ac.in/index.php/s/9gjMQGhXIH0C0ZW" target="_blank">First Law for flow processes</a>
+	<li> <a href="https://owncloud.iitm.ac.in/index.php/s/suGHd5QTIZZIs8z" target="_blank">Second Law of thermodynamics</a>
 		<br> <br>
 	</ul>
 	
