me1100: more problems from moran and shapiro

--- a/teaching/ME1100_Jul_Nov_2018.html
+++ b/teaching/ME1100_Jul_Nov_2018.html
@@ -186,6 +186,8 @@ Calvin's view of entropy
   <li>Problem Set 8: <a href="https://owncloud.iitm.ac.in/index.php/s/9US7dpX4GytJhEB" target="_blank">First Law for flow processes</a>
   <li>Problem Set 10: <a href="https://owncloud.iitm.ac.in/index.php/s/4qAp0GcmMBTuMQM" target="_blank">First Law for flow processes</a> (view-able upon downloading)
   <li>Problem Set 13: <a href="https://owncloud.iitm.ac.in/index.php/s/ak6RQEnHGGbgB0Y" target="_blank"> Second Law, Entropy, Cycles </a>
+  <li> Problem Set 14: <a href="https://owncloud.iitm.ac.in/index.php/s/DLCLxmhmy9kzGSh" target="_blank">Practice problems on II Law </a>
+  <li>Problem Set 15: <a href="https://owncloud.iitm.ac.in/index.php/s/KduVAmlsqEEIS04" target="_blank"> Practice problems on Entropy </a>
   <li>Corrections: <a href="https://owncloud.iitm.ac.in/index.php/s/vFN4hHuRArIH8BU" target="_blank">Corrections</a>
    <br><br>
 </ul>
