me1100: adding tut 8

--- a/teaching/ME1100_Jul_Nov_2018.html
+++ b/teaching/ME1100_Jul_Nov_2018.html
@@ -159,6 +159,7 @@ Calvin's view of entropy
  <li> Tutorial 5: <a href="https://owncloud.iitm.ac.in/index.php/s/ZwvEhgrHn5gH8n0" target="_blank">Problems</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/TvR7zXe0adNkrU9" target="_blank"> Solutions</a> <br>
  <li> Tutorial 6: <a href="https://owncloud.iitm.ac.in/index.php/s/dzAdAbbtYO2nJOm" target="_blank">Problems</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/br5bRajbjr4IMlE" target="_blank"> Solutions</a> <br>
  <li> Tutorial 7: <a href="https://owncloud.iitm.ac.in/index.php/s/XW8kYseNYafiUvv" target="_blank">Problems</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/Qpch9YaOqkDzGOr" target="_blank"> Solutions</a> 
+ <li> Tutorial 8: <a href="https://owncloud.iitm.ac.in/index.php/s/A04qtUlQA8lnhMi" target="_blank">Problems</a>
 	 <br><br>
 	</ul>
 
@@ -175,6 +176,7 @@ Calvin's view of entropy
   <li>Problem Set 9: <a href="https://owncloud.iitm.ac.in/index.php/s/XPIftdM8IecgId6" target="_blank">First Law for flow processes</a>
   <li>Problem Set 11: <a href="https://owncloud.iitm.ac.in/index.php/s/314ZGwfFqq8bBuq" target="_blank">Second law of thermodynamics</a> 
   <li>Problem Set 12: <a href="https://owncloud.iitm.ac.in/index.php/s/TGk1HXnfS6NxIyz" target="_blank">Entropy</a> 
+  <li> Problem Set 16: <a href="https://owncloud.iitm.ac.in/index.php/s/ePv57kPYclfFPHT" target="_blank">Cycles</a> 
 	  <br><br>
 </ul>
 
