me1100: adding TDCE location

--- a/teaching/ME1100_Jul_Nov_2018.html
+++ b/teaching/ME1100_Jul_Nov_2018.html
@@ -86,7 +86,7 @@ Calvin's view of entropy
 	<td width="100%">
 	<center>
 		<h2><a href="https://owncloud.iitm.ac.in/index.php/s/JQztf5HFEt7DqwQ" target="_blank">Course contents</a></h2> 
-<h2> Instructor office hours: Wednesdays 2-3 PM, TDCE 203 </h2></center> <br>
+<h2> Instructor office hours: Wednesdays 2-3 PM, <a href="https://goo.gl/maps/PqbdfLVkFJr" target="_blank"> TDCE</a> 203 </h2></center> <br>
 </center>
 	</td>
 </table>
