--- a/teaching/ME1100_Jul_Nov_2018.html
+++ b/teaching/ME1100_Jul_Nov_2018.html
@@ -159,7 +159,7 @@ Calvin's view of entropy
  <li> Tutorial 5: <a href="https://owncloud.iitm.ac.in/index.php/s/ZwvEhgrHn5gH8n0" target="_blank">Problems</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/TvR7zXe0adNkrU9" target="_blank"> Solutions</a> <br>
  <li> Tutorial 6: <a href="https://owncloud.iitm.ac.in/index.php/s/dzAdAbbtYO2nJOm" target="_blank">Problems</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/br5bRajbjr4IMlE" target="_blank"> Solutions</a> <br>
  <li> Tutorial 7: <a href="https://owncloud.iitm.ac.in/index.php/s/XW8kYseNYafiUvv" target="_blank">Problems</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/Qpch9YaOqkDzGOr" target="_blank"> Solutions</a> 
- <li> Tutorial 8: <a href="https://owncloud.iitm.ac.in/index.php/s/A04qtUlQA8lnhMi" target="_blank">Problems</a>
+ <li> Tutorial 8: <a href="https://owncloud.iitm.ac.in/index.php/s/A04qtUlQA8lnhMi" target="_blank">Problems</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/Vc5l24ycYqvhjEZ" target="_blank"> Solutions</a>
 	 <br><br>
 	</ul>
 
