logger:my speech at RK mutt

--- a/logger/logger.html
+++ b/logger/logger.html
@@ -43,6 +43,6 @@ Travel:
 
 Events: 
 <ul> 
-<li> <a href="https://www.dropbox.com/s/vygxjoxfhz1ec1e/RKMutt_Sister_Nivedita.pdf?dl=0" style="text-decoration:none;color:white" target="_blank"> 150th Sister Nivedita day </a></li>
+<li> <a href="https://www.dropbox.com/s/vygxjoxfhz1ec1e/RKMutt_Sister_Nivedita.pdf?dl=0" style="text-decoration:none;color:white" target="_blank">150th Sister Nivedita day</a>, <a href="https://www.dropbox.com/s/jyl1dacw47bkfa7/Speech.pdf?dl=0" style="text-decoration:none;color:white" target="_blank">Speech</a></li>
 </ul>
 </body></html>
