me1100: Q,W in int rev flow process

--- a/teaching/ME1100_Jul_Nov_2018.html
+++ b/teaching/ME1100_Jul_Nov_2018.html
@@ -112,7 +112,7 @@ Calvin's view of entropy
 	<li> <a href="https://owncloud.iitm.ac.in/index.php/s/aFUgcebOONekXKT" target="_blank">Pure substances</a>
 	<li> <a href="https://owncloud.iitm.ac.in/index.php/s/9gjMQGhXIH0C0ZW" target="_blank">First Law for flow processes</a>
 	<li> <a href="https://owncloud.iitm.ac.in/index.php/s/suGHd5QTIZZIs8z" target="_blank">Second Law of thermodynamics</a>
-		<br> <br>
+	<li> <a href="https://owncloud.iitm.ac.in/index.php/s/zGVDcj8D1yS5VXx" target="_blank">Heat & Work in Internally Reversible, Steady-State Flow Processes</a><br> <br>
 	</ul>
 	
 <h3> Property tables: same as on moodle </h3>
