--- a/index.html
+++ b/index.html
@@ -930,7 +930,7 @@ Write-up coming soon ...
 		<i>Jan-May 2018</i><br><br>
 <li>	ME1100: Undergraduate thermodynamics - <a href="teaching/outline_ME1100.pdf" target="_blank">Course contents</a><br>
 		<i>Jul-Nov 2016</i><br>
-		<i><a href="teaching/ME1100_Jul_Nov_2018.html" target="_blank">Jul-Nov 2018</a> </i><br><br>
+		<i><a href="teaching/teaching.html" target="_blank">Jul-Nov 2018</a> </i><br><br>
 <li>	ME6060: Combustion Fundamentals - <a href="teaching/outline_ME6060.pdf" target="_blank">Course contents</a><br>
 		<i><a href="teaching/ME6060_Jul_Nov_2017.html" target="_blank">Jul-Nov 2017</i><br><br>
 </ul>
