me1100: more end sems

--- a/teaching/teaching.html
+++ b/teaching/teaching.html
@@ -112,7 +112,7 @@ Calvin's view of entropy
 	<li> <a href="https://owncloud.iitm.ac.in/index.php/s/aFUgcebOONekXKT" target="_blank">Pure substances</a>
 	<li> <a href="https://owncloud.iitm.ac.in/index.php/s/9gjMQGhXIH0C0ZW" target="_blank">First Law for flow processes</a>
 	<li> <a href="https://owncloud.iitm.ac.in/index.php/s/suGHd5QTIZZIs8z" target="_blank">Second Law of thermodynamics</a>
-		<br> <br>
+	<li> <a href="https://owncloud.iitm.ac.in/index.php/s/zGVDcj8D1yS5VXx" target="_blank">Heat & Work in Internally Reversible, Steady-State Flow Processes</a><br> <br>
 	</ul>
 	
 <h3> Property tables: same as on moodle </h3>
@@ -134,7 +134,9 @@ Calvin's view of entropy
 <li>Quiz II: Jul-Nov 2016: 	
 	 <a href="https://owncloud.iitm.ac.in/index.php/s/JPAouIbyyhjtkBU" target="_blank">Questions</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/VF21YzBeK4EzrvD" target="_blank">Solutions</a>
 	 <li>Mock Quiz II: <a href="https://owncloud.iitm.ac.in/index.php/s/dImFykIc1PxncSS" target="_blank">Questions</a>,  <a href="https://owncloud.iitm.ac.in/index.php/s/t5FZd9Pcw6OHMn2" target="_blank"> Solution-to-Problem-3 </a>, <a href="https://owncloud.iitm.ac.in/index.php/s/S7XbQaJy3Kb9jwC" target="_blank"> Solution to True/False </a>
-		 <li>End Sems: <a href="https://owncloud.iitm.ac.in/index.php/s/SQxW7hP0dFkLAOe" target="_blank">2008</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/OSOlLyOhE1rnQ65" target="_blank">2010</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/MeKmqAqjfZRN6us" target="_blank">2014</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/6kTR7k9Gcw1Z4OV" target="_blank">2015</a>
+		 <li>End Sems: <a href="https://owncloud.iitm.ac.in/index.php/s/SQxW7hP0dFkLAOe" target="_blank">Jul-Nov 2008</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/OSOlLyOhE1rnQ65" target="_blank">Jul-Nov 2010</a>, <br> 
+			 &emsp; &emsp; &emsp; &emsp; <a href="https://owncloud.iitm.ac.in/index.php/s/MeKmqAqjfZRN6us" target="_blank">Jul-Nov 2014</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/6kTR7k9Gcw1Z4OV" target="_blank">Jan-May 2015</a>, <br>
+			 &emsp; &emsp; &emsp; &emsp; <a href="https://owncloud.iitm.ac.in/index.php/s/zjWmxzom9N69N5N" target="_blank">2016-IITT</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/2jZcNKR97egzU9P" target="_blank"> Jan-May 2014</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/dMiEJfSOX2ke9HQ", target="_blank"> Jan-May 2016</a> (on moodle too)
 </ul>
 
 <h3> Exams: same as on moodle </h3>
