me1100: adding mock exam and solutions

--- a/teaching/ME1100_Jul_Nov_2018.html
+++ b/teaching/ME1100_Jul_Nov_2018.html
@@ -134,15 +134,16 @@ Calvin's view of entropy
 <li>Quiz II: Jul-Nov 2016: 	
 	 <a href="https://owncloud.iitm.ac.in/index.php/s/JPAouIbyyhjtkBU" target="_blank">Questions</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/VF21YzBeK4EzrvD" target="_blank">Solutions</a>
 	 <li>Mock Quiz II: <a href="https://owncloud.iitm.ac.in/index.php/s/dImFykIc1PxncSS" target="_blank">Questions</a>,  <a href="https://owncloud.iitm.ac.in/index.php/s/t5FZd9Pcw6OHMn2" target="_blank"> Solution-to-Problem-3 </a>, <a href="https://owncloud.iitm.ac.in/index.php/s/S7XbQaJy3Kb9jwC" target="_blank"> Solution to True/False </a>
-		 <li>End Sems: <a href="https://owncloud.iitm.ac.in/index.php/s/SQxW7hP0dFkLAOe" target="_blank">Jul-Nov 2008</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/OSOlLyOhE1rnQ65" target="_blank">Jul-Nov 2010</a>, <br> 
-			 &emsp; &emsp; &emsp; &emsp; <a href="https://owncloud.iitm.ac.in/index.php/s/MeKmqAqjfZRN6us" target="_blank">Jul-Nov 2014</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/6kTR7k9Gcw1Z4OV" target="_blank">Jan-May 2015</a>, <br>
-			 &emsp; &emsp; &emsp; &emsp; <a href="https://owncloud.iitm.ac.in/index.php/s/zjWmxzom9N69N5N" target="_blank">2016-IITT</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/2jZcNKR97egzU9P" target="_blank"> Jan-May 2014</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/dMiEJfSOX2ke9HQ", target="_blank"> Jan-May 2016</a> (on moodle too)
+		 <li>Old End Sems: <a href="https://owncloud.iitm.ac.in/index.php/s/SQxW7hP0dFkLAOe" target="_blank">Jul-Nov 2008</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/OSOlLyOhE1rnQ65" target="_blank">Jul-Nov 2010</a>, <br> 
+			 &emsp; &emsp; &emsp; &emsp; &emsp; <a href="https://owncloud.iitm.ac.in/index.php/s/MeKmqAqjfZRN6us" target="_blank">Jul-Nov 2014</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/6kTR7k9Gcw1Z4OV" target="_blank">Jan-May 2015</a>, <br>
+			 &emsp; &emsp; &emsp; &emsp; &emsp; <a href="https://owncloud.iitm.ac.in/index.php/s/zjWmxzom9N69N5N" target="_blank">2016-IITT</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/2jZcNKR97egzU9P" target="_blank"> Jan-May 2014</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/dMiEJfSOX2ke9HQ", target="_blank"> Jan-May 2016</a> (on moodle too)
+		<li>Mock End Sem: <a href="https://owncloud.iitm.ac.in/index.php/s/fWZCw4NnLp6ujjP" target="_blank">Questions</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/b2VnrnyhijogNHI" target="_blank">Solutions</a> (viewable upon downloading)
 </ul>
 
 <h3> Exams: same as on moodle </h3>
 <ul> 
 	<li> Quiz I: <a href="https://owncloud.iitm.ac.in/index.php/s/mBATrsORPwf3Bh7" target="_blank">Questions</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/47uKuppudIFq3Fk" target="_blank">Solutions</a>
-	<li> Quiz II: <a href="https://owncloud.iitm.ac.in/index.php/s/d0S4lWLGxfvIL79" target="_blank">Questions</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/cN9SDuxGuLAml0r" target="_blank">Solutions</a>
+	<li> Quiz II: <a href="https://owncloud.iitm.ac.in/index.php/s/d0S4lWLGxfvIL79" target="_blank">Questions</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/cN9SDuxGuLAml0r" target="_blank">Solutions</a> 
 <br></ul>
 </td>
 
