rohit shan adl journal versions

--- a/index.html
+++ b/index.html
@@ -678,11 +678,14 @@ Property Estimation Using THERM</a> (Credits: M. C. Sanjay, M. Tech 2017)
 <div id="flip1">
 	<li> Shanmugasundaram Dakshnamurthy, Denis A. Knyazkov, Artem M.
 Dmitriev, Oleg P. Korobeinichev, Elna J.K. Nilsson, Alexander A.
-Konnov, and Krithika Narayanaswamy, "Experimental study and a short kinetic model for high temperature oxidation of methyl methacrylate", Combustion Science and Technology (accepted)
+Konnov, and Krithika Narayanaswamy, "Experimental study and a short kinetic model for high temperature oxidation of methyl methacrylate", Combustion Science and Technology (in press)
 </div>
 <div id="panel1">
 	<ul style="list-style-type:square">
+	<li><a href="
+https://www.tandfonline.com/eprint/fzZsKINfreTb2vC9PfIR/full">e-print</a>
 	<li><a href="https://www.dropbox.com/s/59qd6qat51mh1pz/MMA.pdf?dl=0" target="_blank">Preprint*</a></li>
+	<li><a href="https://doi.org/10.1080/00102202.2018.1535492" target="_blank">Journal version</a></li>
 	<li><a href="https://www.dropbox.com/s/q2c60lulb44mutd/supplementary.pdf?dl=0" target="_blank">Supplementary document</a></li>
 	<li>Experimental data: <a href="https://www.dropbox.com/s/93lg0d3klxy3uwd/MMA_mole%20fractions_final_EXPERIMENT.xls?dl=0" target="_blank">Speciation in atmospheric premixed flame, laminar burning velocities</a></li>
 	<li>Mechanism files: <a href="https://www.dropbox.com/s/wo6drchfpdds0zl/short_mma_mech_Chemkin.inp?dl=0" target="_blank">Chemkin format</a>/<a href="https://www.dropbox.com/s/mfa36i6rqfi6w99/short_mma_mech_FlameMaster.txt?dl=0" target="_blank">FlameMaster format</a>
@@ -710,8 +713,9 @@ Konnov, and Krithika Narayanaswamy, "Experimental study and a short kinetic mode
 </div>
 <div id="panel7">
 	<ul style="list-style-type:square">
-	<li><a href="https://authors.elsevier.com/a/1XTGb2KiHMUm4"> Free access link</a> (valid until September 17, 2018)
+	<!--<li><a href="https://authors.elsevier.com/a/1XTGb2KiHMUm4"> Free access link</a> (valid until September 17, 2018)-->
 	<li><a href="https://www.dropbox.com/s/s8cvkpa6t25tgoh/MB_R2.pdf?dl=0" target="_blank">Preprint*</a> ,  <a href="https://www.dropbox.com/s/5qbzf8d3qcdr9mu/CNF_2.pdf?dl=0">Highlights</a></li>
+	<li><a href="https://doi.org/10.1016/j.combustflame.2018.06.033" target="_blank">Journal version</a>
 	<li><a href="https://www.dropbox.com/s/sq9cuvl15pbbpim/supplementary_CNF.pdf?dl=0" target="_blank">Supplementary document</a></li>
 		<li>Mechanism files: <br>
 			Complete mechanism: <a href="https://www.dropbox.com/s/4nbq7lgkrwlbcql/IITM_mech.inp?dl=0" target="_blank">Chemkin format</a>/<a href="https://www.dropbox.com/s/xskmyzxbrpk3pll/IITM_mech.mech?dl=0">FlameMaster format</a> <br>
@@ -729,8 +733,9 @@ Konnov, and Krithika Narayanaswamy, "Experimental study and a short kinetic mode
 </div>
 <div id="panel6">
 	<ul style="list-style-type:square">
-	<li><a href="	https://authors.elsevier.com/a/1XHew2KiHMUbd" target="_blank">Free access Link</a> (valid until August 15, 2018)
+	<!--<li><a href="	https://authors.elsevier.com/a/1XHew2KiHMUbd" target="_blank">Free access Link</a> (valid until August 15, 2018)-->
 	<li><a href="https://www.dropbox.com/s/xlrfa5toz6ewris/Revised_Manuscript.pdf?dl=0" target="_blank">Preprint*</a> ,  <a href="https://www.dropbox.com/s/oqb8cuwcliwrza9/CNF_1.pdf?dl=0">Highlights</a></li>
+	<li><a href="https://doi.org/10.1016/j.combustflame.2018.05.031" target="_blank">Journal version</a>
 	<li><a href="https://www.dropbox.com/s/38016hs2zfwdud3/Supplementary_Material.pdf?dl=0" target="_blank">Supplementary document</a></li>
 		<li>Mechanism files: 
 			<a href="https://www.dropbox.com/s/pu3zdxy1hd43iu9/Chemkin.mech?dl=0" target="_blank">Chemkin format</a>/<a href="https://www.dropbox.com/s/43d6zyd86inngbg/FlameMaster.mech?dl=0">FlameMaster format</a>
